# MLOPs

./: .gitignore  README.md  db.py  docker-compose.yaml  main.py  models.py  pyproject.toml  schema.sql  test_static.py
UI/: package-lock.json  vite.config.js
UI/src/: App.css  App.jsx
router/: QueueManager.py
